# conoha-cli

./: .pre-commit-config.yaml  README.md  conoha-client.bash  pyproject.toml
.github/workflows/: ci.yml
conoha_client/: cli.py  pra.py  resize.py
conoha_client/_shared/: __init__.py  ssh_template.py
conoha_client/_shared/add_vm/: __init__.py  cli.py  options.py  repo.py
conoha_client/_shared/add_vm/domain/: __init__.py  domain.py  errors.py
conoha_client/_shared/renforced_vm/: __init__.py  cli.py  domain.py  query.py
conoha_client/_shared/snapshot/: __init__.py  repo.py
conoha_client/add_vm/: __init__.py  cli.py  fixture20231002.json  fixture_servers20231006.json  repo.py  test_repo.py  usecase.py
conoha_client/add_vm/domain/: __init__.py  added_vm.py  domain.py  errors.py  test_domain.py
conoha_client/api/: __init__.py  billing.py  flavor.py  image.py  server.py
conoha_client/features/: __init__.py
conoha_client/features/_shared/: __init__.py  conftest.py  domain.py  prompt.py  util.py
conoha_client/features/_shared/command_option/: __init__.py  add_vm_options.py  build_vm_options.py  default_callback.py  each_args.py  test_each_args.py
conoha_client/features/_shared/endpoints/: __init__.py  endpoints.py  environments.py  test_endpoints.py  test_env.py  token.py
conoha_client/features/_shared/model_list/: __init__.py  domain.py  test_domain.py
conoha_client/features/_shared/view/: __init__.py  domain.py  test_domain.py
conoha_client/features/add_vm/: cli.py  repo.py
conoha_client/features/billing/: __init__.py  cli.py  domain.py  repo.py
conoha_client/features/billing/domain/: __init__.py  domain.py  fixture_invoice.json  invoice.py  order.py  test_domain.py  test_invoice.py
conoha_client/features/image/: __init__.py  cli.py  domain.py  repo.py
conoha_client/features/image/domain/: __init__.py  distribution.py  errors.py  fixture20231014.json  image.py  operating_system.py  test_domain.py
conoha_client/features/list_servers/: billing.py  flavor.py  image.py  server.py
conoha_client/features/list_vm/: __init__.py  domain.py  repo.py
conoha_client/features/plan/: __init__.py  cli.py  domain.py  errors.py  repo.py  test_repo.py
conoha_client/features/share/: __init__.py  endpoints.py  test_endpoints.py  test_env.py
conoha_client/features/sshkey/: __init__.py  cli.py  domain.py  repo.py
conoha_client/features/template/: __init__.py  domain.py  fixture_template.txt  repo.py  test_domain.py  test_repo.py
conoha_client/features/vm/: __init__.py  billing.py  cli.py  domain.py  errors.py  image.py
conoha_client/features/vm/repo/: __init__.py  command.py  query.py  (+2 more)
conoha_client/features/vm_actions/: __init__.py  cli.py  command_option.py  repo.py  test_cli.py  test_option.py  test_repo.py
conoha_client/features/vm_image/: cli.py  domain.py
conoha_client/features/vm_plan/: domain.py  repo.py
conoha_client/graceful_remove/: cli.py
conoha_client/graceful_remove/domain/: __init__.py  test_domain.py
conoha_client/graceful_remove/repo/: __init__.py  broadcast_msg.py  curry.py  repo.py
conoha_client/resize/: __init__.py  cli.py
conoha_client/snapshot/: __init__.py  cli.py  domain.py  repo.py
conoha_client/vm/: __init__.py  add.py  rebuild.py  resize.py
conoha_client/watch/: __init__.py  cli.py
conoha_client/watch/domain/: __init__.py  domain.py  errors.py  event.py  test_domain.py
conoha_client/watch/repo/: __init__.py  memo.py  repo.py  test_repo.py
src/api/: billing.py  credentials.py  endpoints.py  environments.py  flavor.py  image.py  server.py  test_credentials.py  test_env.py  token.py  util.py
(+3 files in other folders)
